vpc/network_acl.tf
resource "aws_network_acl" "main" {
  egress {
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = "0"
    icmp_code  = "0"
    icmp_type  = "0"
    protocol   = "-1"
    rule_no    = "100"
    to_port    = "0"
  }

  ingress {
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = "0"
    icmp_code  = "0"
    icmp_type  = "0"
    protocol   = "-1"
    rule_no    = "100"
    to_port    = "0"
  }

  subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_c.id, aws_subnet.private_d.id]
  vpc_id     = aws_vpc.main.id

  tags = merge(var.tags, { "Name" = "${var.project}" })
}
